--- a/vibe-checker/package.json
+++ b/vibe-checker/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "patch-mind",
-  "displayName": "patch-mind",
+  "name": "vibe-checker",
+  "displayName": "vibe-checker",
   "description": "",
   "version": "0.0.1",
   "engines": {
@@ -14,7 +14,7 @@
   "contributes": {
     "commands": [
       {
-        "command": "patch-mind.helloWorld",
+        "command": "vibe-checker.helloWorld",
         "title": "Hello World"
       }
     ]
