--- a/vibe-checker/package.json
+++ b/vibe-checker/package.json
@@ -39,6 +39,7 @@
         "typescript": "^5.8.2"
     },
     "dependencies": {
+        "dotenv": "^16.4.7",
         "openai": "^4.91.1"
     }
 }
